# SDL-1.2

./: CMakeLists.txt
include/: SDL_config_cmake.h.in
test/: CMakeLists.txt
